--- a/source/index.html
+++ b/source/index.html
@@ -16,33 +16,35 @@
   </div>
   <header class="page-header">
     <div class="page-header__wrapper site-navigation">
-      <button type="button" id="button-open" class="page-header__toggle">
-        <span class="visually-hidden">Открыть меню</span>
-        <svg width="24" height="12">
-          <use xlink:href="#icon-burger"></use>
-        </svg>
-      </button>
-      <button type="button" id="button-close" class="page-header__toggle header__toggle--close">
-        <span class="visually-hidden">Закрыть меню</span>
-        <svg width="18" height="18">
-          <use xlink:href="#icon-cross"></use>
-        </svg>
-      </button>
-      <a class="site-navigation__logo">
-        <svg width="143" height="23">
-          <use xlink:href="#icon-logo"></use>
-        </svg>
-      </a>
+      <div class="page-header__top">
+        <button type="button" id="button-open" class="page-header__toggle">
+          <span class="visually-hidden">Открыть меню</span>
+          <svg width="24" height="18">
+            <use xlink:href="#icon-burger" viewBox="0 0 24 12"></use>
+          </svg>
+        </button>
+        <button type="button" id="button-close" class="page-header__toggle page-header__toggle--close">
+          <span class="visually-hidden">Закрыть меню</span>
+          <svg width="18" height="18">
+            <use xlink:href="#icon-cross"></use>
+          </svg>
+        </button>
+        <a class="site-navigation__logo">
+          <svg width="143" height="23" viewBox="0 0 143 23">
+            <use xlink:href="#icon-logo"></use>
+          </svg>
+        </a>
+      </div>
       <nav class="site-navigation__nav main-nav">
-        <ul class="main-nav__list">
+        <ul class="main-nav__list main-nav__list--closed">
           <li class="main-nav__item"><a href="#">Методика</a></li>
           <li class="main-nav__item"><a href="#">Преподаватели</a></li>
           <li class="main-nav__item"><a href="#">Группы</a></li>
           <li class="main-nav__item"><a href="#">Отзывы</a></li>
           <li class="main-nav__item"><a href="#">Контакты</a></li>
         </ul>
+        <a href="tel:+74959834719" class="site-navigation__tel site-navigation__tel--closed"><svg width="15" height="15"><use xlink:href="#icon-tel"></use></svg>+ 7 (495) 983-47-19</a>
       </nav>
-      <a href="tel:+74959834719" class="site-navigation__tel"><svg width="15" height="15"><use xlink:href="#icon-tel"></use></svg>+ 7 (495) 983-47-19</a>
     </div>
   </header>
 
