education block tablet, desktop stylization

--- a/source/index.html
+++ b/source/index.html
@@ -68,15 +68,17 @@
             <p>
               Мы взяли все самое лучшее из традиционных и современных методик обучения и развития детей.
               Обучение английскому языку происходит легко и интересно, ведь малыши не зубрят материал по учебникам,
-              а познают его через игру, сказки, книги и музыку.
-              Наша методика также включает в себя обучение по программе Cambridge. Благодаря этому, наши ученики без
+              а познают его через игру, сказки, книги и музыку.</p>
+              <p>Наша методика также включает в себя обучение по программе Cambridge. Благодаря этому, наши ученики без
               труда
               сдают международные и государственные экзамены.
             </p>
           </li>
           <li class="top-list__item">
             <h3>Посмотрите, как проходят наши занятия</h3>
-            <img src="#" alt="Видео о нашем обучении">
+            <video poster="img/video-bg-destop.jpg" width="430" height="229">
+              <source src="video/sample.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+            </video>
             <button class="video-button"><span class="visually-hidden">Посмотреть видео</span></button>
           </li>
         </ul>
@@ -96,13 +98,13 @@
           <li class="bottom-list__item">
             <h3>Педагоги — носители языка</h3>
             <p>
-              Занятия ведут преподаватели из США, Великобритании и Канады, для которых английский язык является родным
+              Занятия ведут преподаватели <br>из США, Великобритании и Канады, для которых английский язык является родным
             </p>
           </li>
           <li class="bottom-list__item">
             <h3>Небольшие группы</h3>
             <p>
-              Дети занимаются в группах до 5 человек, что позволяет применять индивидуальный подход к каждому
+              Дети занимаются в группах <br>до 5 человек, что позволяет применять индивидуальный подход к каждому
             </p>
           </li>
         </ul>
