groups block desktop stylization

--- a/source/index.html
+++ b/source/index.html
@@ -113,32 +113,34 @@
 
     <section class="groups">
       <div class="groups__wrapper">
-        <h2>Наши группы</h2>
-        <p>
-          В группах занимается до 5 человек. Все дети в группе примерно одного возраста и уровня знаний.
-        </p>
+        <div class="groups__top">
+          <h2>Наши группы</h2>
+          <p>
+            В группах занимается до 5 человек. Все дети в группе примерно одного возраста и уровня знаний.
+          </p>
+        </div>
         <ul class="groups__list">
-          <li class="groups__list-item">
+          <li class="groups__list-item groups__list-item--first">
             <h3>Бэбики-1</h3>
             <p>1 раз в неделю</p>
             <p>1,5 часа занятие</p>
             <p><b>2500 </b><svg width="11" height="14"><use xlink:href="#icon-rub"></use></svg> в месяц</p>
-            <button class="button button--blue">Записаться</button>
+            <button class="button groups__button button--blue">Записаться</button>
           </li>
-          <li class="groups__list-item">
+          <li class="groups__list-item groups__list-item--second">
             <h3>Бэбики-2</h3>
             <p>2 раза в неделю</p>
             <p>1,5 часа занятие</p>
             <p><b>4000 </b><svg width="11" height="14"><use xlink:href="#icon-rub"></use></svg>
               в месяц</p>
-            <button class="button button--yellow">Записаться</button>
+            <button class="button groups__button button--yellow">Записаться</button>
           </li>
-          <li class="groups__list-item">
+          <li class="groups__list-item groups__list-item--third">
             <h3>Бэбики-3</h3>
             <p>3 раза в неделю</p>
             <p>1 час занятие</p>
             <p><b>4000 </b><svg width="11" height="14"><use xlink:href="#icon-rub"></use></svg> в месяц</p>
-            <button class="button button--pink">Записаться</button>
+            <button class="button groups__button button--pink">Записаться</button>
           </li>
         </ul>
       </div>
