--- a/source/index.html
+++ b/source/index.html
@@ -17,13 +17,13 @@
   <header class="page-header">
     <div class="page-header__wrapper site-navigation">
       <div class="page-header__top">
-        <button type="button" id="button-open" class="page-header__toggle">
+        <button type="button" id="button-open" class="page-header__toggle site-navigation__open-toggle">
           <span class="visually-hidden">Открыть меню</span>
           <svg width="24" height="18">
             <use xlink:href="#icon-burger" viewBox="0 0 24 12"></use>
           </svg>
         </button>
-        <button type="button" id="button-close" class="page-header__toggle page-header__toggle--close">
+        <button type="button" id="button-close" class="page-header__toggle page-header__toggle--close site-navigation__close-toggle">
           <span class="visually-hidden">Закрыть меню</span>
           <svg width="18" height="18">
             <use xlink:href="#icon-cross"></use>
@@ -36,7 +36,7 @@
         </a>
       </div>
       <nav class="site-navigation__nav main-nav">
-        <ul class="main-nav__list main-nav__list--closed">
+        <ul class="main-nav__list site-navigation__list">
           <li class="main-nav__item"><a href="#">Методика</a></li>
           <li class="main-nav__item"><a href="#">Преподаватели</a></li>
           <li class="main-nav__item"><a href="#">Группы</a></li>
@@ -57,6 +57,13 @@
         <p>Гармоничное развитие детей и обучение через полное погружение в языковую среду</p>
         <a class="button button--yellow">Записаться</a>
       </div>
+      <svg class="main-info__desktop-mask" width="1366" height="100" viewBox="0 0 1366 100" preserveAspectRatio="none" fill="none">
+        <use xlink:href="#mask-desktop"></use>
+      </svg>
+
+      <svg class="main-info__tablet-mask" width="768" height="51" viewBox="0 0 768 51" preserveAspectRatio="none" fill="none">
+        <use xlink:href="#mask-tablet"></use>
+      </svg>
     </section>
 
     <section class="education">
@@ -153,6 +160,7 @@
           <p>Все наши преподаватели — носители английского языка и имеют необходимое образование и опыт работы с детьми
           </p>
         </div>
+        <div class="teachers__slider">
         <ul class="teachers__list">
           <li class="teachers__list-item">
             <img src="img/teacher-1@1px.jpg" alt="">
@@ -202,14 +210,15 @@
             <p>Канада</p>
           </li>
         </ul>
+      </div>
         <div class="teachers__buttons">
           <button><span class="visually-hidden">Показать предыдущих преподавателей</span>
-            <svg width="15" height="8">
+            <svg width="17" height="10">
               <use xlink:href="#icon-left"></use>
             </svg>
           </button>
           <button><span class="visually-hidden">Показать следующих преподавателей</span>
-            <svg width="15" height="8">
+            <svg width="17" height="10">
               <use xlink:href="#icon-right"></use>
             </svg>
           </button>
@@ -218,6 +227,15 @@
     </section>
 
     <section class="booking">
+      <svg class="booking__desktop-bg" viewBox="0 0 1366 453" width="1366" height="453" preserveAspectRatio="none" fill="none">
+        <use xlink:href="#mask-booking-desktop"></use>
+      </svg>
+      <svg class="booking__tablet-bg" viewBox="0 0 768 450" width="768" height="450" preserveAspectRatio="none">
+        <use xlink:href="#mask-booking-tablet"></use>
+      </svg>
+      <svg class="booking__mobile-bg" viewBox="0 0 320 384" width="320" height="384" preserveAspectRatio="none">
+        <use xlink:href="#mask-booking-mobile"></use>
+      </svg>
       <div class="booking__wrapper">
         <h2>Запишитесь на бесплатное пробное занятие</h2>
         <p>Приходите к нам в гости и мы познакомим вас с педагогами, расскажем о школе и ответим на все ваши вопросы</p>
@@ -226,16 +244,16 @@
     </section>
 
     <section class="contacts">
-      <div class="contacts__wrapper">
+      <div class="contacts__info">
         <h2>Мы ждем вас</h2>
         <ul class="contacts__list">
-          <li class="contacts__list-item">
+          <li class="contacts__list-item contacts__list-item--first">
             <h3>Приходите к нам:</h3>
             <address>
-              Санкт-Петербург, ул. Большая Конюшенная, 19
+              Санкт-Петербург,<br> ул. Большая Конюшенная, 19
             </address>
           </li>
-          <li class="contacts__list-item">
+          <li class="contacts__list-item contacts__list-item--second">
             <h3>Режим работы:</h3>
             <p>Пн-Сб, с 9-00 до 20-00</p>
           </li>
@@ -243,11 +261,11 @@
             <h3>Позвоните нам:</h3>
             <a href="tel:+74959834719">+ 7 (495) 983-47-19</a>
           </li>
-          <li class="contacts__list-item">
+          <li class="contacts__list-item contacts__list-item--fifth">
             <h3>Напишите нам:</h3>
             <a href="mailto:info@cleverbaby.ru">info@cleverbaby.ru</a>
           </li>
-          <li class="contacts__list-item">
+          <li class="contacts__list-item contacts__list-item--third">
             <h3>Мы в соцсетях:</h3>
             <ul class="social-list">
               <li class="social-list__item"><a href="#"><span class="visually-hidden">Страница Clever baby в
@@ -264,7 +282,7 @@
                   </a></li>
               <li class="social-list__item"><a href="#"><span class="visually-hidden">Страница Clever baby в
                     Инстаграм</span>
-                  <svg widht="12" height="12">
+                  <svg width="12" height="12">
                     <use xlink:href="#icon-inst"></use>
                   </svg>
                   </a></li>
@@ -273,14 +291,19 @@
         </ul>
       </div>
 
-      <div class="contacts__map"></div>
+      <div class="contacts__map">
+        <img src="img/map-bg.jpg" alt="Мы на карте">
+      </div>
     </section>
   </main>
 
   <footer class="page-footer">
     <div class="page-footer__wrapper">
       <h2 class="visually-hidden">Права и политика конфиденциальности</h2>
-      <p><a href="#">CleverBaby 2020 Все права защищены</a></p>
+      <p><a href="#">CleverBaby
+        <svg width="12" height="12" viewBox="0 0 12 12">
+          <use xlink:href="#icon-copyright"></use>
+        </svg>2020 Все права защищены</a></p>
       <p><a href="#">Политика конфиденциальности</a></p>
     </div>
   </footer>
